k8s/overlays/prod/gateway-deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distributed-rate-limiter-gateway
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: gateway
          resources:
            requests:
              cpu: 500m
              memory: 768Mi
            limits:
              cpu: "2"
              memory: 2Gi
